Fix Railway production DB config, contract signing links, and add white-label/legal/GPS updates
- Remove localhost fallback from spring.datasource.url/username/password so a
  misconfigured deploy fails fast instead of silently connecting to localhost.
- Add DatabaseUrlEnvironmentPostProcessor to convert Railway/Neon-style
  DATABASE_URL (postgres://) into a jdbc:postgresql://...?sslmode=require URL.
- Extend DatabaseSafetyInitializer to refuse startup with a clear error when
  datasource vars are missing, or when the resolved host is localhost while
  running in prod or on Railway.
- Bind server.port to Railway's $PORT and set spring.jpa.open-in-view=false.
- Prefill client email/phone in the contract signing QR modal, fix WhatsApp/
  SMS/Email share links, lock signing URLs to the configured backend origin,
  and embed a real scannable QR in the signing email and final contract PDF.
- Add legal compliance module (consent, privacy requests, data retention),
  white-label custom domain verification, and misc GPS/contract fixes.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>