@@ -2,9 +2,9 @@ package com.carrental.service;
 
 import com.carrental.entity.AdditionalDriver;
 import com.carrental.entity.Contract;
-import com.carrental.entity.ContractTemplate;
 import com.carrental.entity.Deposit;
 import com.carrental.entity.Tenant;
+import com.lowagie.text.Chunk;
 import com.lowagie.text.Document;
 import com.lowagie.text.Element;
 import com.lowagie.text.Font;
@@ -39,7 +39,8 @@ import java.util.List;
 @Service
 @RequiredArgsConstructor
 public class PdfService {
-    private final ContractTemplatePdfService contractTemplatePdfService;
+
+    private final QrCodeService qrCodeService;
 
     private static final Color INK = new Color(19, 43, 76);
     private static final Color BLUE = new Color(23, 76, 135);
@@ -60,50 +61,10 @@ public class PdfService {
     private static final String PDF_STORAGE_DIR = "pdfs/contracts";
 
     public byte[] generateContractPdf(Contract contract, Tenant tenant, Deposit deposit) {
-        return generateContractPdf(contract, tenant, deposit, true);
-    }
-
-    public byte[] generateContractPdf(Contract contract, Tenant tenant, Deposit deposit, boolean useAgencyTemplate) {
         logAgencyDataDebug(contract, tenant);
-        if (useAgencyTemplate) {
-            // 1. Try agency-uploaded template overlay (only works when frontFilePath is set)
-            java.util.Optional<byte[]> templatePdf = contractTemplatePdfService.generateIfAvailable(contract, tenant, deposit);
-            if (templatePdf.isPresent()) {
-                Long tplId = contract != null && contract.getSelectedTemplate() != null ? contract.getSelectedTemplate().getId() : null;
-                String tplName = contract != null && contract.getSelectedTemplate() != null ? contract.getSelectedTemplate().getName() : "tenant_default";
-                log.info("[CONTRACT_PDF_GENERATE] contractId={} templateId={} templateName={} output=AGENCY_TEMPLATE success=true",
-                        contract != null ? contract.getId() : null, tplId, tplName);
-                return templatePdf.get();
-            }
-
-            // 2. Overlay returned empty (system template or no uploaded file).
-            //    Resolve the template record to get its code and route to the right programmatic layout.
-            if (contract != null && tenant != null) {
-                ContractTemplate resolved = contractTemplatePdfService.resolveTemplateForPdf(contract, tenant.getId());
-                if (resolved != null) {
-                    String code = resolved.getTemplateCode() != null ? resolved.getTemplateCode() : "";
-                    log.info("[CONTRACT_PDF_TEMPLATE] contractId={} contractNumber={} selectedTemplateId={} selectedTemplateName={} templateCode={} fallbackUsed=false",
-                            contract.getId(), contract.getContractNumber(), resolved.getId(), resolved.getName(), code);
-                    return generateByTemplateCode(contract, tenant, deposit, code);
-                }
-            }
-        }
-        // 3. No template at all — use classic Moroccan layout.
-        log.info("[CONTRACT_PDF_GENERATE] contractId={} templateId=null templateName=SYSTEM_PDF output=SYSTEM_DEFAULT success=true",
+        log.info("[CONTRACT_PDF_GENERATE] contractId={} output=SYSTEM_DEFAULT success=true",
                 contract != null ? contract.getId() : null);
         return generateClassicLayout(contract, tenant, deposit);
-    }
-
-    /** Routes to the correct programmatic layout based on the system template code. */
-    private byte[] generateByTemplateCode(Contract contract, Tenant tenant, Deposit deposit, String code) {
-        if (code == null) return generateClassicLayout(contract, tenant, deposit);
-        return switch (code.toLowerCase()) {
-            case "modern-a4" -> generateModernLayout(contract, tenant, deposit);
-            case "compact-one-page" -> generateCompactLayout(contract, tenant, deposit);
-            case "conditions-page", "detailed-agency", "vehicle-inspection" -> generateDetailedLayout(contract, tenant, deposit);
-            case "premium-luxury", "enterprise-custom" -> generatePremiumLayout(contract, tenant, deposit);
-            default -> generateClassicLayout(contract, tenant, deposit); // classic-moroccan + unknown codes
-        };
     }
 
     // ── LAYOUT: Classic Moroccan ──────────────────────────────────────────────
@@ -126,7 +87,7 @@ public class PdfService {
 
             addPayment(document, contract, deposit);
             addDocuments(document, contract);
-            addLegalNote(document, tenant, contract);
+            addAcceptanceStatement(document);
             addSignatures(document, contract, tenant);
             addVerification(document, contract);
             addTermsPage(document, contract, tenant);
@@ -136,444 +97,6 @@ public class PdfService {
         } catch (Exception e) {
             log.error("Classic layout PDF generation failed for contract {}", contract != null ? contract.getContractNumber() : null, e);
             throw new IllegalStateException("Unable to generate contract PDF", e);
-        }
-    }
-
-    // ── LAYOUT: Modern A4 ────────────────────────────────────────────────────
-
-    private byte[] generateModernLayout(Contract contract, Tenant tenant, Deposit deposit) {
-        Color SLATE_900 = new Color(15, 23, 42);
-        Color SLATE_50  = new Color(248, 250, 252);
-        Color SLATE_200 = new Color(226, 232, 240);
-        Font MOD_HDR   = new Font(Font.HELVETICA, 14, Font.BOLD, Color.WHITE);
-        Font MOD_SEC   = new Font(Font.HELVETICA, 8f, Font.BOLD, Color.WHITE);
-        Font MOD_LBL   = new Font(Font.HELVETICA, 6.8f, Font.BOLD, SLATE_900);
-        Font MOD_VAL   = new Font(Font.HELVETICA, 7f, Font.NORMAL, Color.BLACK);
-        Font MOD_SM    = new Font(Font.HELVETICA, 6f, Font.NORMAL, new Color(71, 85, 105));
-        try (ByteArrayOutputStream baos = new ByteArrayOutputStream()) {
-            Document doc = new Document(PageSize.A4, 28, 28, 24, 24);
-            PdfWriter.getInstance(doc, baos);
-            doc.open();
-
-            // ── Header: dark agency bar + contract meta ──
-            PdfPTable hdr = new PdfPTable(2);
-            hdr.setWidthPercentage(100);
-            hdr.setWidths(new float[]{2f, 1.2f});
-
-            PdfPCell agCell = new PdfPCell();
-            agCell.setBorder(Rectangle.NO_BORDER);
-            agCell.setBackgroundColor(SLATE_900);
-            agCell.setPadding(10);
-            Image logo = agencyAssetImage(effectiveLogo(contract, tenant), "logo");
-            if (logo != null) { logo.scaleToFit(44, 34); agCell.addElement(logo); }
-            agCell.addElement(new Paragraph(value(tenant != null ? tenant.getName() : null, "Agence de Location"), MOD_HDR));
-            agCell.addElement(new Paragraph(join(tenant != null ? tenant.getAddress() : null, tenant != null ? tenant.getCity() : null), MOD_SM));
-            agCell.addElement(new Paragraph("Tel: " + value(tenant != null ? tenant.getPhone() : null, ""), MOD_SM));
-            hdr.addCell(agCell);
-
-            PdfPCell ctCell = new PdfPCell();
-            ctCell.setBorder(Rectangle.NO_BORDER);
-            ctCell.setBackgroundColor(SLATE_50);
-            ctCell.setPadding(10);
-            ctCell.setHorizontalAlignment(Element.ALIGN_RIGHT);
-            ctCell.addElement(new Paragraph("CONTRAT DE LOCATION", new Font(Font.HELVETICA, 8, Font.BOLD, SLATE_900)));
-            ctCell.addElement(new Paragraph("N°: " + value(contract != null ? contract.getContractNumber() : null, ""), new Font(Font.HELVETICA, 8.5f, Font.BOLD, SLATE_900)));
-            ctCell.addElement(new Paragraph("Date: " + date(contract != null ? contract.getStartDate() : null), MOD_SM));
-            hdr.addCell(ctCell);
-            doc.add(hdr);
-
-            // ── Period strip ──
-            PdfPTable strip = new PdfPTable(4);
-            strip.setWidthPercentage(100);
-            strip.setSpacingBefore(6);
-            addInfoBox(strip, "DEPART", date(valueDate(contract != null ? contract.getPickupDate() : null, contract != null ? contract.getStartDate() : null)) + " " + time(contract != null ? contract.getPickupTime() : null), SLATE_50, SLATE_200, MOD_LBL, MOD_VAL);
-            addInfoBox(strip, "RETOUR",  date(valueDate(contract != null ? contract.getReturnDate() : null, contract != null ? contract.getEndDate() : null))  + " " + time(contract != null ? contract.getReturnTime() : null),  SLATE_50, SLATE_200, MOD_LBL, MOD_VAL);
-            addInfoBox(strip, "VEHICULE", value(contract != null ? contract.getVehicleBrand() : null, "") + " " + value(contract != null ? contract.getVehicleModel() : null, ""), SLATE_50, SLATE_200, MOD_LBL, MOD_VAL);
-            addInfoBox(strip, "IMMAT.",   value(contract != null ? contract.getVehicleRegistration() : null, ""), SLATE_50, SLATE_200, MOD_LBL, MOD_VAL);
-            doc.add(strip);
-
-            // ── Client / Vehicle ──
-            PdfPTable body = new PdfPTable(2);
-            body.setWidthPercentage(100);
-            body.setWidths(new float[]{1, 1});
-            body.setSpacingBefore(5);
-            body.addCell(column(modernSection("LOCATAIRE", new String[][]{
-                {"Nom complet",   value(contract != null ? contract.getClientFullName() : null, "")},
-                {"CIN/Passeport", value(contract != null ? contract.getClientCin() : null, contract != null ? contract.getClientPassportNumber() : null)},
-                {"Permis n°",     value(contract != null ? contract.getClientDriverLicense() : null, "")},
-                {"Telephone",     value(contract != null ? contract.getClientPhone() : null, "")},
-                {"Nationalite",   value(contract != null ? contract.getClientNationality() : null, "")},
-                {"Adresse",       join(contract != null ? contract.getClientAddress() : null, contract != null ? contract.getClientCity() : null)},
-            }, SLATE_900, SLATE_50, MOD_SEC, MOD_LBL, MOD_VAL)));
-            body.addCell(column(modernSection("VEHICULE", new String[][]{
-                {"Marque/Modele",  value(contract != null ? contract.getVehicleBrand() : null, "") + " " + value(contract != null ? contract.getVehicleModel() : null, "")},
-                {"Immatriculation",value(contract != null ? contract.getVehicleRegistration() : null, "")},
-                {"Carburant",      value(contract != null ? contract.getFuelType() : null, contract != null ? contract.getFuelLevelStart() : null)},
-                {"Km depart",      integer(contract != null ? contract.getMileageStart() : null)},
-                {"Km retour",      integer(contract != null ? contract.getMileageEnd() : null)},
-                {"Niveau carb.",   value(contract != null ? contract.getFuelLevelStart() : null, "")},
-            }, SLATE_900, SLATE_50, MOD_SEC, MOD_LBL, MOD_VAL)));
-            doc.add(body);
-
-            // ── Payment ──
-            PdfPTable pay = new PdfPTable(4);
-            pay.setWidthPercentage(100);
-            pay.setSpacingBefore(5);
-            PdfPCell payHdr = new PdfPCell(new Phrase("REGLEMENT", MOD_SEC));
-            payHdr.setColspan(4); payHdr.setBackgroundColor(SLATE_900);
-            payHdr.setPadding(4); payHdr.setBorder(Rectangle.NO_BORDER);
-            payHdr.setHorizontalAlignment(Element.ALIGN_CENTER);
-            pay.addCell(payHdr);
-            paymentField(pay, "Prix/jour",  money(contract != null ? contract.getDailyPrice() : null));
-            paymentField(pay, "Nb jours",   integer(contract != null ? contract.getRentalDays() : null));
-            paymentField(pay, "Total",       money(valueMoney(contract != null ? contract.getTotalPrice() : null, contract != null ? rentalTotal(contract) : null)));
-            paymentField(pay, "Avance",      money(contract != null ? contract.getPaidAmount() : null));
-            paymentField(pay, "Reste",       money(contract != null ? contract.getRemainingAmount() : null));
-            paymentField(pay, "Caution",     depositMoney(valueMoney(contract != null ? contract.getDepositAmount() : null, deposit != null ? deposit.getAmount() : null)));
-            paymentField(pay, "Mode paiement", value(contract != null ? contract.getPaymentMethod() : null, ""));
-            paymentField(pay, "Frais supp.", money(sum(contract != null ? contract.getDeliveryFees() : null, contract != null ? contract.getReturnFees() : null)));
-            doc.add(pay);
-
-            // ── Docs ──
-            PdfPTable docsT = new PdfPTable(1);
-            docsT.setWidthPercentage(100);
-            docsT.setSpacingBefore(4);
-            PdfPCell docHdr = new PdfPCell(new Phrase("DOCUMENTS", MOD_SEC));
-            docHdr.setBackgroundColor(SLATE_900); docHdr.setPadding(4); docHdr.setBorder(Rectangle.NO_BORDER);
-            docsT.addCell(docHdr);
-            PdfPCell docBody = new PdfPCell(new Phrase("[ ] Carte grise  [ ] Assurance  [ ] Vignette  [ ] Visite technique  [ ] Autorisation", MOD_VAL));
-            docBody.setPadding(5); docBody.setBackgroundColor(SLATE_50); docBody.setBorder(Rectangle.NO_BORDER);
-            docsT.addCell(docBody);
-            doc.add(docsT);
-
-            // ── Signatures ──
-            PdfPTable sigs = new PdfPTable(2);
-            sigs.setWidthPercentage(100);
-            sigs.setSpacingBefore(5);
-            sigs.addCell(signatureCell("Signature du Client", contract != null ? contract.getClientSignature() : null, contract != null ? contract.getClientSignedAt() : null));
-            sigs.addCell(signatureCell("Signature Agence", value(contract != null ? contract.getOwnerSignature() : null, tenant != null ? tenant.getAgencySignature() : null), contract != null ? contract.getOwnerSignedAt() : null));
-            doc.add(sigs);
-
-            // Stamp if available (snapshot-aware)
-            String modStampUrl = effectiveStamp(contract, tenant);
-            Image modStampImg = agencyAssetImage(modStampUrl, "stamp");
-            if (modStampImg != null) {
-                PdfPTable modStampT = new PdfPTable(2);
-                modStampT.setWidthPercentage(100);
-                modStampT.setWidths(new float[]{1, 1});
-                modStampT.addCell(cell("", Rectangle.NO_BORDER, 2, Element.ALIGN_LEFT, Color.WHITE));
-                PdfPCell modStampC = cell("", Rectangle.BOX, 3, Element.ALIGN_CENTER, Color.WHITE);
-                modStampImg.scaleToFit(68, 68);
-                modStampImg.setAlignment(Element.ALIGN_CENTER);
-                Paragraph modStampLbl = new Paragraph("Cachet / Tampon", SMALL_BOLD);
-                modStampLbl.setAlignment(Element.ALIGN_CENTER);
-                modStampC.addElement(modStampLbl);
-                modStampC.addElement(modStampImg);
-                modStampT.addCell(modStampC);
-                doc.add(modStampT);
-            }
-
-            // ── QR ──
-            PdfPTable verif = new PdfPTable(2);
-            verif.setWidthPercentage(100);
-            verif.setSpacingBefore(4);
-            verif.addCell(pseudoQrCell(value(contract != null ? contract.getQrToken() : null, contract != null ? contract.getContractNumber() : null)));
-            verif.addCell(cell("QR verification | " + value(contract != null ? contract.getContractNumber() : null, "") + " | " + value(contract != null ? contract.getPublicSigningUrl() : null, contract != null ? contract.getQrToken() : null, ""), Rectangle.BOX, 5, Element.ALIGN_LEFT, Color.WHITE));
-            doc.add(verif);
-            addTermsPage(doc, contract, tenant);
-
-            doc.close();
-            return baos.toByteArray();
-        } catch (Exception e) {
-            log.error("Modern A4 PDF failed for contract {}, falling back to classic", contract != null ? contract.getContractNumber() : null, e);
-            return generateClassicLayout(contract, tenant, deposit);
-        }
-    }
-
-    // ── LAYOUT: Compact One Page ──────────────────────────────────────────────
-
-    private byte[] generateCompactLayout(Contract contract, Tenant tenant, Deposit deposit) {
-        Font COMPACT_TITLE   = new Font(Font.HELVETICA, 10, Font.BOLD, INK);
-        Font COMPACT_SECTION = new Font(Font.HELVETICA, 7f, Font.BOLD, Color.WHITE);
-        Font COMPACT_LABEL   = new Font(Font.HELVETICA, 6f, Font.BOLD, INK);
-        Font COMPACT_VALUE   = new Font(Font.HELVETICA, 6f, Font.NORMAL, Color.BLACK);
-        Font COMPACT_SMALL   = new Font(Font.HELVETICA, 5.5f, Font.NORMAL, Color.BLACK);
-        try (ByteArrayOutputStream baos = new ByteArrayOutputStream()) {
-            Document doc = new Document(PageSize.A4, 16, 16, 14, 14);
-            PdfWriter.getInstance(doc, baos);
-            doc.open();
-
-            // ── Compact header ──
-            PdfPTable hdr = new PdfPTable(2);
-            hdr.setWidthPercentage(100);
-            hdr.setWidths(new float[]{2.2f, 1});
-            PdfPCell agCell = cell("", Rectangle.BOX, 3, Element.ALIGN_LEFT, LIGHT_BLUE);
-            agCell.addElement(new Paragraph(value(tenant != null ? tenant.getName() : null, "Agence"), COMPACT_TITLE));
-            agCell.addElement(new Paragraph(join(tenant != null ? tenant.getAddress() : null, tenant != null ? tenant.getCity() : null), COMPACT_SMALL));
-            agCell.addElement(new Paragraph("Tel: " + value(tenant != null ? tenant.getPhone() : null, ""), COMPACT_SMALL));
-            hdr.addCell(agCell);
-            PdfPCell numCell = cell("CONTRAT N°: " + value(contract != null ? contract.getContractNumber() : null, ""), Rectangle.BOX, 3, Element.ALIGN_CENTER, Color.WHITE, COMPACT_LABEL);
-            numCell.addElement(new Paragraph("Date: " + date(contract != null ? contract.getStartDate() : null), COMPACT_SMALL));
-            hdr.addCell(numCell);
-            doc.add(hdr);
-
-            // ── Title ──
-            PdfPTable ttl = new PdfPTable(1);
-            ttl.setWidthPercentage(100);
-            ttl.addCell(cell("CONTRAT DE LOCATION DE VOITURE - COMPACT", Rectangle.BOX, 3, Element.ALIGN_CENTER, BLUE, COMPACT_SECTION));
-            doc.add(ttl);
-
-            // ── Fuel ──
-            PdfPTable fuel = new PdfPTable(2);
-            fuel.setWidthPercentage(100);
-            fuel.setWidths(new float[]{2, 1});
-            fuel.addCell(cell("Carburant: 0[ ] 1/4[ ] 1/2[ ] 3/4[ ] 1[ ]  Niveau: " + value(contract != null ? contract.getFuelLevelStart() : null, ""), Rectangle.BOX, 2.5f, Element.ALIGN_LEFT, Color.WHITE, COMPACT_SMALL));
-            fuel.addCell(cell("Edition: " + date(contract != null && contract.getCreatedAt() != null ? contract.getCreatedAt().toLocalDate() : LocalDate.now()), Rectangle.BOX, 2.5f, Element.ALIGN_RIGHT, Color.WHITE, COMPACT_SMALL));
-            doc.add(fuel);
-
-            // ── Client + Vehicle compact ──
-            PdfPTable body = new PdfPTable(2);
-            body.setWidthPercentage(100);
-            body.setWidths(new float[]{1, 1});
-            PdfPTable leftT = new PdfPTable(1); leftT.setWidthPercentage(100);
-            leftT.addCell(cell("CLIENT", Rectangle.BOX, 2.5f, Element.ALIGN_CENTER, BLUE, COMPACT_SECTION));
-            compactField(leftT, "Nom", value(contract != null ? contract.getClientFullName() : null, ""), COMPACT_LABEL, COMPACT_VALUE);
-            compactField(leftT, "CIN", value(contract != null ? contract.getClientCin() : null, contract != null ? contract.getClientPassportNumber() : null), COMPACT_LABEL, COMPACT_VALUE);
-            compactField(leftT, "Permis", value(contract != null ? contract.getClientDriverLicense() : null, ""), COMPACT_LABEL, COMPACT_VALUE);
-            compactField(leftT, "Tel", value(contract != null ? contract.getClientPhone() : null, ""), COMPACT_LABEL, COMPACT_VALUE);
-            compactField(leftT, "Adresse", join(contract != null ? contract.getClientAddress() : null, contract != null ? contract.getClientCity() : null), COMPACT_LABEL, COMPACT_VALUE);
-            body.addCell(column(leftT));
-
-            PdfPTable rightT = new PdfPTable(1); rightT.setWidthPercentage(100);
-            rightT.addCell(cell("VOITURE", Rectangle.BOX, 2.5f, Element.ALIGN_CENTER, BLUE, COMPACT_SECTION));
-            compactField(rightT, "Marque",  value(contract != null ? contract.getVehicleBrand() : null, "") + " " + value(contract != null ? contract.getVehicleModel() : null, ""), COMPACT_LABEL, COMPACT_VALUE);
-            compactField(rightT, "Immat.",  value(contract != null ? contract.getVehicleRegistration() : null, ""), COMPACT_LABEL, COMPACT_VALUE);
-            compactField(rightT, "Km dep.", integer(contract != null ? contract.getMileageStart() : null), COMPACT_LABEL, COMPACT_VALUE);
-            compactField(rightT, "Depart",  date(valueDate(contract != null ? contract.getPickupDate() : null, contract != null ? contract.getStartDate() : null)), COMPACT_LABEL, COMPACT_VALUE);
-            compactField(rightT, "Retour",  date(valueDate(contract != null ? contract.getReturnDate() : null, contract != null ? contract.getEndDate() : null)), COMPACT_LABEL, COMPACT_VALUE);
-            body.addCell(column(rightT));
-            doc.add(body);
-
-            // ── Compact payment ──
-            PdfPTable pay = new PdfPTable(4);
-            pay.setWidthPercentage(100);
-            PdfPCell cmpPayHdr = cell("PAIEMENT", Rectangle.BOX, 2.5f, Element.ALIGN_CENTER, BLUE, COMPACT_SECTION);
-            cmpPayHdr.setColspan(4);
-            pay.addCell(cmpPayHdr);
-            compactPayField(pay, "Prix/j",  money(contract != null ? contract.getDailyPrice() : null), COMPACT_LABEL, COMPACT_VALUE);
-            compactPayField(pay, "Jours",   integer(contract != null ? contract.getRentalDays() : null), COMPACT_LABEL, COMPACT_VALUE);
-            compactPayField(pay, "Total",   money(valueMoney(contract != null ? contract.getTotalPrice() : null, contract != null ? rentalTotal(contract) : null)), COMPACT_LABEL, COMPACT_VALUE);
-            compactPayField(pay, "Avance",  money(contract != null ? contract.getPaidAmount() : null), COMPACT_LABEL, COMPACT_VALUE);
-            compactPayField(pay, "Reste",   money(contract != null ? contract.getRemainingAmount() : null), COMPACT_LABEL, COMPACT_VALUE);
-            compactPayField(pay, "Caution", depositMoney(valueMoney(contract != null ? contract.getDepositAmount() : null, deposit != null ? deposit.getAmount() : null)), COMPACT_LABEL, COMPACT_VALUE);
-            compactPayField(pay, "Mode",    value(contract != null ? contract.getPaymentMethod() : null, ""), COMPACT_LABEL, COMPACT_VALUE);
-            compactPayField(pay, "Nb j.",   integer(contract != null ? contract.getRentalDays() : null), COMPACT_LABEL, COMPACT_VALUE);
-            doc.add(pay);
-
-            // ── Documents ──
-            PdfPTable docsT = new PdfPTable(1);
-            docsT.setWidthPercentage(100);
-            docsT.addCell(cell("DOCUMENTS: [ ] Carte grise  [ ] Assurance  [ ] Vignette  [ ] Visite tech.", Rectangle.BOX, 2.5f, Element.ALIGN_LEFT, Color.WHITE, COMPACT_SMALL));
-            doc.add(docsT);
-
-            // ── Compact signatures ──
-            PdfPTable sigs = new PdfPTable(3);
-            sigs.setWidthPercentage(100);
-            sigs.setWidths(new float[]{1, 1, 0.6f});
-            sigs.addCell(signatureCell("Signature Client", contract != null ? contract.getClientSignature() : null, contract != null ? contract.getClientSignedAt() : null));
-            sigs.addCell(signatureCell("Signature Agence", value(contract != null ? contract.getOwnerSignature() : null, tenant != null ? tenant.getAgencySignature() : null), contract != null ? contract.getOwnerSignedAt() : null));
-            sigs.addCell(pseudoQrCell(value(contract != null ? contract.getQrToken() : null, contract != null ? contract.getContractNumber() : null)));
-            doc.add(sigs);
-
-            doc.close();
-            return baos.toByteArray();
-        } catch (Exception e) {
-            log.error("Compact PDF failed for contract {}, falling back to classic", contract != null ? contract.getContractNumber() : null, e);
-            return generateClassicLayout(contract, tenant, deposit);
-        }
-    }
-
-    // ── LAYOUT: Detailed / Conditions Page ───────────────────────────────────
-
-    private byte[] generateDetailedLayout(Contract contract, Tenant tenant, Deposit deposit) {
-        try (ByteArrayOutputStream baos = new ByteArrayOutputStream()) {
-            Document doc = new Document(PageSize.A4, 24, 24, 22, 22);
-            PdfWriter.getInstance(doc, baos);
-            doc.open();
-
-            // Page 1 — same as classic
-            addHeader(doc, contract, tenant);
-            addFuelAndMeta(doc, contract);
-            PdfPTable main = new PdfPTable(2);
-            main.setWidthPercentage(100);
-            main.setWidths(new float[]{1, 1});
-            main.addCell(column(leftColumn(contract)));
-            main.addCell(column(rightColumn(contract)));
-            doc.add(main);
-            addPayment(doc, contract, deposit);
-            addDocuments(doc, contract);
-            addSignatures(doc, contract, tenant);
-            addVerification(doc, contract);
-            addTermsPage(doc, contract, tenant);
-
-            doc.close();
-            return baos.toByteArray();
-        } catch (Exception e) {
-            log.error("Detailed PDF failed for contract {}, falling back to classic", contract != null ? contract.getContractNumber() : null, e);
-            return generateClassicLayout(contract, tenant, deposit);
-        }
-    }
-
-    // ── LAYOUT: Premium Luxury ────────────────────────────────────────────────
-
-    private byte[] generatePremiumLayout(Contract contract, Tenant tenant, Deposit deposit) {
-        Color DARK    = new Color(15, 23, 42);
-        Color GOLD    = new Color(180, 83, 9);
-        Color GOLD_LT = new Color(254, 243, 199);
-        Color DARK_LT = new Color(30, 41, 59);
-        Font PREM_HDR  = new Font(Font.HELVETICA, 15, Font.BOLD, Color.WHITE);
-        Font PREM_SUB  = new Font(Font.HELVETICA, 7f, Font.NORMAL, new Color(148, 163, 184));
-        Font PREM_SEC  = new Font(Font.HELVETICA, 8f, Font.BOLD, Color.WHITE);
-        Font PREM_LBL  = new Font(Font.HELVETICA, 7f, Font.BOLD, DARK);
-        Font PREM_VAL  = new Font(Font.HELVETICA, 7.2f, Font.NORMAL, Color.BLACK);
-        Font PREM_SM   = new Font(Font.HELVETICA, 6.5f, Font.NORMAL, DARK);
-        try (ByteArrayOutputStream baos = new ByteArrayOutputStream()) {
-            Document doc = new Document(PageSize.A4, 26, 26, 22, 22);
-            PdfWriter.getInstance(doc, baos);
-            doc.open();
-
-            // ── Premium dark header ──
-            PdfPTable hdr = new PdfPTable(2);
-            hdr.setWidthPercentage(100);
-            hdr.setWidths(new float[]{2f, 1.1f});
-
-            PdfPCell leftHdr = new PdfPCell();
-            leftHdr.setBorder(Rectangle.NO_BORDER);
-            leftHdr.setBackgroundColor(DARK);
-            leftHdr.setPadding(12);
-            Image logo = agencyAssetImage(effectiveLogo(contract, tenant), "logo");
-            if (logo != null) { logo.scaleToFit(50, 38); leftHdr.addElement(logo); }
-            leftHdr.addElement(new Paragraph(value(tenant != null ? tenant.getName() : null, "Agence Premium"), PREM_HDR));
-            leftHdr.addElement(new Paragraph(join(tenant != null ? tenant.getAddress() : null, tenant != null ? tenant.getCity() : null), PREM_SUB));
-            leftHdr.addElement(new Paragraph("Tel: " + value(tenant != null ? tenant.getPhone() : null, "") + "  |  " + value(tenant != null ? tenant.getEmail() : null, ""), PREM_SUB));
-            hdr.addCell(leftHdr);
-
-            PdfPCell rightHdr = new PdfPCell();
-            rightHdr.setBorder(Rectangle.NO_BORDER);
-            rightHdr.setBackgroundColor(GOLD);
-            rightHdr.setPadding(12);
-            rightHdr.setHorizontalAlignment(Element.ALIGN_RIGHT);
-            rightHdr.addElement(new Paragraph("CONTRAT", new Font(Font.HELVETICA, 11, Font.BOLD, Color.WHITE)));
-            rightHdr.addElement(new Paragraph("DE LOCATION", new Font(Font.HELVETICA, 8, Font.BOLD, Color.WHITE)));
-            rightHdr.addElement(new Paragraph("N°: " + value(contract != null ? contract.getContractNumber() : null, ""), new Font(Font.HELVETICA, 8, Font.NORMAL, GOLD_LT)));
-            rightHdr.addElement(new Paragraph("Date: " + date(contract != null ? contract.getStartDate() : null), new Font(Font.HELVETICA, 7, Font.NORMAL, GOLD_LT)));
-            hdr.addCell(rightHdr);
-            doc.add(hdr);
-
-            // ── Gold accent strip ──
-            PdfPTable strip = new PdfPTable(4);
-            strip.setWidthPercentage(100);
-            strip.setSpacingBefore(4);
-            addInfoBox(strip, "DEPART", date(valueDate(contract != null ? contract.getPickupDate() : null, contract != null ? contract.getStartDate() : null)), GOLD_LT, GOLD, PREM_LBL, PREM_VAL);
-            addInfoBox(strip, "RETOUR",  date(valueDate(contract != null ? contract.getReturnDate() : null, contract != null ? contract.getEndDate() : null)),  GOLD_LT, GOLD, PREM_LBL, PREM_VAL);
-            addInfoBox(strip, "JOURS",   integer(contract != null ? contract.getRentalDays() : null),            GOLD_LT, GOLD, PREM_LBL, PREM_VAL);
-            addInfoBox(strip, "TOTAL",   money(valueMoney(contract != null ? contract.getTotalPrice() : null, contract != null ? rentalTotal(contract) : null)), GOLD_LT, GOLD, PREM_LBL, PREM_VAL);
-            doc.add(strip);
-
-            // ── Client / Vehicle ──
-            PdfPTable body = new PdfPTable(2);
-            body.setWidthPercentage(100);
-            body.setWidths(new float[]{1, 1});
-            body.setSpacingBefore(5);
-            body.addCell(column(modernSection("LOCATAIRE", new String[][]{
-                {"Nom complet",   value(contract != null ? contract.getClientFullName() : null, "")},
-                {"CIN/Passeport", value(contract != null ? contract.getClientCin() : null, contract != null ? contract.getClientPassportNumber() : null)},
-                {"Permis n°",     value(contract != null ? contract.getClientDriverLicense() : null, "")},
-                {"Telephone",     value(contract != null ? contract.getClientPhone() : null, "")},
-                {"Nationalite",   value(contract != null ? contract.getClientNationality() : null, "")},
-                {"Adresse",       join(contract != null ? contract.getClientAddress() : null, contract != null ? contract.getClientCity() : null)},
-            }, DARK_LT, GOLD_LT, PREM_SEC, PREM_LBL, PREM_VAL)));
-            body.addCell(column(modernSection("VEHICULE", new String[][]{
-                {"Marque/Modele",  value(contract != null ? contract.getVehicleBrand() : null, "") + " " + value(contract != null ? contract.getVehicleModel() : null, "")},
-                {"Immatriculation",value(contract != null ? contract.getVehicleRegistration() : null, "")},
-                {"Carburant",      value(contract != null ? contract.getFuelType() : null, "")},
-                {"Km depart",      integer(contract != null ? contract.getMileageStart() : null)},
-                {"Km retour",      integer(contract != null ? contract.getMileageEnd() : null)},
-                {"Lieu depart",    value(contract != null ? contract.getPickupLocation() : null, "")},
-            }, DARK_LT, GOLD_LT, PREM_SEC, PREM_LBL, PREM_VAL)));
-            doc.add(body);
-
-            // ── Payment ──
-            PdfPTable pay = new PdfPTable(4);
-            pay.setWidthPercentage(100);
-            pay.setSpacingBefore(5);
-            PdfPCell payH = new PdfPCell(new Phrase("REGLEMENT", PREM_SEC));
-            payH.setColspan(4); payH.setBackgroundColor(GOLD); payH.setPadding(4); payH.setBorder(Rectangle.NO_BORDER);
-            payH.setHorizontalAlignment(Element.ALIGN_CENTER);
-            pay.addCell(payH);
-            paymentField(pay, "Prix/jour", money(contract != null ? contract.getDailyPrice() : null));
-            paymentField(pay, "Nb jours",  integer(contract != null ? contract.getRentalDays() : null));
-            paymentField(pay, "Total",     money(valueMoney(contract != null ? contract.getTotalPrice() : null, contract != null ? rentalTotal(contract) : null)));
-            paymentField(pay, "Avance",    money(contract != null ? contract.getPaidAmount() : null));
-            paymentField(pay, "Reste",     money(contract != null ? contract.getRemainingAmount() : null));
-            paymentField(pay, "Caution",   depositMoney(valueMoney(contract != null ? contract.getDepositAmount() : null, deposit != null ? deposit.getAmount() : null)));
-            paymentField(pay, "Mode",      value(contract != null ? contract.getPaymentMethod() : null, ""));
-            paymentField(pay, "Frais supp.", money(sum(contract != null ? contract.getDeliveryFees() : null, contract != null ? contract.getReturnFees() : null)));
-            doc.add(pay);
-
-            // ── Documents ──
-            PdfPTable docsT = new PdfPTable(1);
-            docsT.setWidthPercentage(100);
-            docsT.setSpacingBefore(4);
-            PdfPCell docH = new PdfPCell(new Phrase("DOCUMENTS", PREM_SEC));
-            docH.setBackgroundColor(DARK_LT); docH.setPadding(4); docH.setBorder(Rectangle.NO_BORDER);
-            docsT.addCell(docH);
-            PdfPCell docBody = new PdfPCell(new Phrase("[ ] Carte grise  [ ] Assurance  [ ] Vignette  [ ] Visite technique  [ ] Autorisation", PREM_SM));
-            docBody.setPadding(5); docBody.setBackgroundColor(GOLD_LT); docBody.setBorder(Rectangle.NO_BORDER);
-            docsT.addCell(docBody);
-            doc.add(docsT);
-
-            // ── Signatures ──
-            PdfPTable sigs = new PdfPTable(2);
-            sigs.setWidthPercentage(100);
-            sigs.setSpacingBefore(5);
-            sigs.addCell(signatureCell("Signature du Client", contract != null ? contract.getClientSignature() : null, contract != null ? contract.getClientSignedAt() : null));
-            sigs.addCell(signatureCell("Signature Agence / Direction", value(contract != null ? contract.getOwnerSignature() : null, tenant != null ? tenant.getAgencySignature() : null), contract != null ? contract.getOwnerSignedAt() : null));
-            doc.add(sigs);
-
-            // Stamp if available (snapshot-aware)
-            String premStampUrl = effectiveStamp(contract, tenant);
-            Image premStampImg = agencyAssetImage(premStampUrl, "stamp");
-            if (premStampImg != null) {
-                PdfPTable premStampT = new PdfPTable(2);
-                premStampT.setWidthPercentage(100);
-                premStampT.setWidths(new float[]{1, 1});
-                premStampT.addCell(cell("", Rectangle.NO_BORDER, 2, Element.ALIGN_LEFT, Color.WHITE));
-                PdfPCell premStampC = cell("", Rectangle.BOX, 3, Element.ALIGN_CENTER, Color.WHITE);
-                premStampImg.scaleToFit(68, 68);
-                premStampImg.setAlignment(Element.ALIGN_CENTER);
-                Paragraph premStampLbl = new Paragraph("Cachet / Tampon", SMALL_BOLD);
-                premStampLbl.setAlignment(Element.ALIGN_CENTER);
-                premStampC.addElement(premStampLbl);
-                premStampC.addElement(premStampImg);
-                premStampT.addCell(premStampC);
-                doc.add(premStampT);
-            }
-
-            // ── QR ──
-            PdfPTable verif = new PdfPTable(2);
-            verif.setWidthPercentage(100);
-            verif.setSpacingBefore(4);
-            verif.addCell(pseudoQrCell(value(contract != null ? contract.getQrToken() : null, contract != null ? contract.getContractNumber() : null)));
-            verif.addCell(cell("Contrat premium verifie | " + value(contract != null ? contract.getContractNumber() : null, "") + " | " + value(contract != null ? contract.getPublicSigningUrl() : null, contract != null ? contract.getQrToken() : null, ""), Rectangle.BOX, 5, Element.ALIGN_LEFT, Color.WHITE));
-            doc.add(verif);
-            addTermsPage(doc, contract, tenant);
-
-            doc.close();
-            return baos.toByteArray();
-        } catch (Exception e) {
-            log.error("Premium PDF failed for contract {}, falling back to classic", contract != null ? contract.getContractNumber() : null, e);
-            return generateClassicLayout(contract, tenant, deposit);
         }
     }
 
@@ -725,11 +248,14 @@ public class PdfService {
         document.add(table);
     }
 
-    private void addLegalNote(Document document, Tenant tenant, Contract contract) throws Exception {
+    /** Short acceptance line on page 1, right before the signatures — the full terms live on page 2, not here. */
+    private void addAcceptanceStatement(Document document) throws Exception {
         PdfPTable table = oneColumn();
-        section(table, "CONDITIONS GENERALES");
-        String termsText = effectiveTerms(contract, tenant);
-        table.addCell(cell(termsText, Rectangle.BOX, 5, Element.ALIGN_LEFT, PALE));
+        table.setSpacingBefore(3);
+        Font ackFont = new Font(Font.HELVETICA, 6.8f, Font.ITALIC, Color.BLACK);
+        table.addCell(cell("En signant ce contrat, le client reconnait avoir pris connaissance de l'etat du vehicule, "
+                + "des montants dus, de la caution et des conditions generales de location figurant en page suivante.",
+                Rectangle.BOX, 4, Element.ALIGN_LEFT, PALE, ackFont));
         document.add(table);
     }
 
@@ -741,13 +267,14 @@ public class PdfService {
      */
     private void addTermsPage(Document doc, Contract contract, Tenant tenant) throws Exception {
         doc.newPage();
-        Font condTitle = new Font(Font.HELVETICA, 12, Font.BOLD, INK);
-        Font condText  = new Font(Font.HELVETICA, 7.5f, Font.NORMAL, Color.BLACK);
+        Font condTitle = new Font(Font.HELVETICA, 11, Font.BOLD, INK);
+        Font condSecTitle = new Font(Font.HELVETICA, 7f, Font.BOLD, INK);
+        Font condText  = new Font(Font.HELVETICA, 6.6f, Font.NORMAL, Color.BLACK);
         Font condFoot  = new Font(Font.HELVETICA, 6.5f, Font.ITALIC, new Color(100, 100, 100));
 
         PdfPTable condHdr = new PdfPTable(1);
         condHdr.setWidthPercentage(100);
-        condHdr.addCell(cell("CONDITIONS GENERALES DE LOCATION", Rectangle.BOX, 6, Element.ALIGN_CENTER, LIGHT_BLUE, condTitle));
+        condHdr.addCell(cell("CONDITIONS GENERALES DE LOCATION", Rectangle.BOX, 5, Element.ALIGN_CENTER, LIGHT_BLUE, condTitle));
         doc.add(condHdr);
 
         String customTerms = effectiveTerms(contract, tenant);
@@ -761,29 +288,34 @@ public class PdfService {
                 if (line.trim().isEmpty()) continue;
                 PdfPTable lineTable = new PdfPTable(1);
                 lineTable.setWidthPercentage(100);
-                lineTable.setSpacingBefore(3);
+                lineTable.setSpacingBefore(2);
                 lineTable.addCell(cell(line.trim(), Rectangle.NO_BORDER, 2, Element.ALIGN_LEFT, Color.WHITE, condText));
                 doc.add(lineTable);
             }
         } else {
-            // Default numbered French rental terms
-            String[] defaults = {
-                "Le client est responsable du vehicule pendant toute la duree de la location.",
-                "Le vehicule doit etre restitue a la date, l'heure et au lieu convenus.",
-                "Le niveau de carburant doit etre restitue tel que convenu dans le contrat.",
-                "Toute amende, peage ou penalite survenue durant la location est a la charge du client.",
-                "Tout dommage non declare lors de la prise en charge peut etre facture au client.",
-                "La caution / depot de garantie est remboursable apres restitution du vehicule, en l'absence de dommage ou de frais impayes.",
-                "Tout retard de restitution peut entrainer des frais supplementaires.",
-                "Le contrat devient valide apres signature de l'agence et du client."
+            // Concise default terms — one short numbered paragraph per rule, tight spacing to fit one A4 page.
+            String[][] defaults = {
+                {"Conducteur autorise", "Le vehicule ne peut etre conduit que par le locataire et les conducteurs inscrits au contrat, titulaires d'un permis de conduire valide."},
+                {"Utilisation du vehicule", "Le locataire s'engage a utiliser le vehicule avec prudence, a respecter le Code de la route et a ne pas sous-louer le vehicule, participer a une competition, transporter des produits interdits ou quitter le Maroc sans autorisation ecrite du loueur."},
+                {"Etat du vehicule", "Le locataire reconnait recevoir le vehicule dans l'etat decrit au depart. Toute anomalie doit etre signalee avant la remise des cles. Le vehicule doit etre restitue dans le meme etat, sous reserve de l'usure normale."},
+                {"Duree et restitution", "Le vehicule doit etre restitue a la date, a l'heure et au lieu prevus. Toute prolongation doit etre autorisee par le loueur. Tout retard peut entrainer des frais supplementaires."},
+                {"Paiement et caution", "Le locataire doit regler les montants indiques au contrat. La caution peut etre utilisee pour couvrir les dommages, le carburant manquant, les retards, les amendes, la perte des cles ou les frais de nettoyage exceptionnel."},
+                {"Carburant et kilometrage", "Le vehicule doit etre rendu avec le niveau de carburant convenu. Tout carburant manquant ou depassement du kilometrage autorise peut etre facture."},
+                {"Accident, panne ou vol", "Le locataire doit informer immediatement le loueur, contacter les autorites lorsque necessaire, remplir un constat et ne faire aucune reparation sans autorisation prealable, sauf urgence de securite."},
+                {"Assurance", "Le vehicule beneficie de l'assurance prevue au contrat. Les franchises et dommages non couverts restent a la charge du locataire dans les limites prevues par le contrat et la legislation applicable."},
+                {"Infractions", "Les amendes, infractions routieres, peages et frais administratifs lies a la periode de location restent a la charge du locataire."},
+                {"Donnees et GPS", "Les donnees personnelles et les informations de geolocalisation eventuelles sont utilisees uniquement pour la gestion du contrat, la securite du vehicule, les incidents et les obligations legales."},
+                {"Acceptation", "La signature du contrat confirme que le locataire a lu et accepte le contrat, l'etat du vehicule, les montants, la caution et les presentes conditions."},
+                {"Droit applicable", "Le contrat est soumis au droit marocain. En cas de litige, les parties rechercheront d'abord une solution amiable avant de saisir la juridiction competente."}
             };
             int n = 1;
-            for (String art : defaults) {
-                PdfPTable artTable = new PdfPTable(1);
-                artTable.setWidthPercentage(100);
-                artTable.setSpacingBefore(4);
-                artTable.addCell(cell(n + ". " + art, Rectangle.NO_BORDER, 3, Element.ALIGN_LEFT, Color.WHITE, condText));
-                doc.add(artTable);
+            for (String[] art : defaults) {
+                Paragraph p = new Paragraph();
+                p.setSpacingBefore(3f);
+                p.setLeading(7.6f);
+                p.add(new Chunk(n + ". " + art[0] + " — ", condSecTitle));
+                p.add(new Chunk(art[1], condText));
+                doc.add(p);
                 n++;
             }
         }
@@ -838,7 +370,7 @@ public class PdfService {
         boolean usingFallbackInitials = logoSource == null || logoSource.isBlank();
         log.info("[PDF_AGENCY_DATA_DEBUG] contractId={} agencyId={} agencyName={} agencyAddressPresent={} " +
                 "agencyPhonePresent={} agencyEmail={} agencyRcIcePresent={} logoPresent={} logoSource={} " +
-                "termsPresent={} termsLength={} signaturePresent={} stampPresent={} usingFallbackInitials={} templateFile={}",
+                "termsPresent={} termsLength={} signaturePresent={} stampPresent={} usingFallbackInitials={}",
                 contract != null ? contract.getId() : null,
                 tenant != null ? tenant.getId() : null,
                 tenant != null ? tenant.getName() : null,
@@ -854,9 +386,7 @@ public class PdfService {
                 terms != null ? terms.length() : 0,
                 contract != null && contract.getClientSignature() != null && !contract.getClientSignature().isBlank(),
                 stampSource != null && !stampSource.isBlank(),
-                usingFallbackInitials,
-                contract != null && contract.getSelectedTemplate() != null
-                        ? contract.getSelectedTemplate().getName() : "SYSTEM_DEFAULT");
+                usingFallbackInitials);
     }
 
     /** Returns the agency logo to use: snapshot value if set, otherwise live tenant value. */
@@ -888,13 +418,33 @@ public class PdfService {
         PdfPTable table = new PdfPTable(2);
         table.setWidthPercentage(100);
         table.setWidths(new float[]{1, 3});
-        table.addCell(pseudoQrCell(value(c.getQrToken(), c.getPublicSigningUrl(), c.getContractNumber())));
+        table.addCell(qrCell(c.getPublicSigningUrl(), value(c.getQrToken(), c.getPublicSigningUrl(), c.getContractNumber())));
         table.addCell(cell("QR de verification du contrat\n"
                 + "Contrat: " + value(c.getContractNumber(), "") + "\n"
                 + "URL / Token: " + value(c.getPublicSigningUrl(), c.getQrToken(), "Non genere") + "\n"
                 + "Document genere depuis les donnees officielles de l'agence.",
                 Rectangle.BOX, 5, Element.ALIGN_LEFT, Color.WHITE));
         document.add(table);
+    }
+
+    /** Real scannable QR when a public signing URL exists; falls back to the pseudo-pattern otherwise. */
+    private PdfPCell qrCell(String signingUrl, String pseudoSeed) {
+        if (signingUrl != null && !signingUrl.isBlank()) {
+            byte[] png = qrCodeService.generatePng(signingUrl, 240);
+            if (png != null) {
+                try {
+                    Image qrImage = Image.getInstance(png);
+                    PdfPCell outer = cell("", Rectangle.BOX, 4, Element.ALIGN_CENTER, Color.WHITE);
+                    qrImage.scaleToFit(90, 90);
+                    qrImage.setAlignment(Element.ALIGN_CENTER);
+                    outer.addElement(qrImage);
+                    return outer;
+                } catch (Exception ignored) {
+                    // fall through to pseudo cell
+                }
+            }
+        }
+        return pseudoQrCell(pseudoSeed);
     }
 
     public String saveContractPdf(Contract contract, byte[] pdfBytes) {
@@ -1050,7 +600,14 @@ public class PdfService {
                 }
                 resolvedFrom = "url";
             } else {
-                Path localPath = Paths.get(source);
+                // Uploaded assets are stored as web-root-relative paths (e.g. "/uploads/agency/5/logo.png"),
+                // the same convention served by WebMvcFeatureConfig's "/uploads/**" resource handler, which
+                // maps them onto Path.of("uploads") relative to the app's working directory. Paths.get()
+                // on a string starting with "/" would instead resolve from the filesystem/drive root, so
+                // strip the leading slash to land on the same app-relative file the browser actually loads.
+                Path localPath = source.startsWith("/uploads/")
+                        ? Path.of(source.substring(1))
+                        : Paths.get(source);
                 if (Files.exists(localPath)) {
                     bytes = Files.readAllBytes(localPath);
                     resolvedFrom = "local-file";
